# SaturnArm

./: .gitattributes  .gitignore  BOM - Arm - Sheet1.csv  BOM - Arm.csv  JOURNAL.md  README.md
Chassis/: SaturnArm.gcode.3mf
Chassis/bot/: Arm_Base.stl  PCB_Chassis.stl  Standoff-Bot.stl  Stepper-Insert.step  insert-motor-bot.step
Chassis/middle/: Arm1.stl  BearingHolderLow-Spacer.step  arm1-thinGear.step  bearingHolder-Low.step
Chassis/top/: BearingHolderMiddle-Spacer.step  Nut-10mm.step  TopClawL.stl  TopClawR.stl  arm2.stl  bearingHolder-middle.step
Firmware/: arm_control.cpp
Firmware/Arm/: Arm.cpp  Arm.h  CMakeLists.txt  arm_controller.cpp  arm_controller.h  camera.cpp  camera.h  lwipopts.h  ov2640.c  ov2640.h  server.cpp  wifi.h  wifi_util.cpp  wifi_util.h
Kicad/: arm.kicad_pcb  arm.kicad_pro  arm.kicad_sch  fp-lib-table  sym-lib-table  ~arm.kicad_pcb.lck
Kicad/Files Needed/: DIP794W45P254L1969H508Q16.kicad_mod  MODULE_RASPBERRY_PI_ZERO_2_W.kicad_mod  MODULE_TMC2208_SILENTSTEPSTICK.kicad_mod  SaturnB&W.kicad_sym  TMC2208_SILENTSTEPSTICK.kicad_sym
Kicad/Files Needed/footprints/: SN74HC165N.kicad_sym
Kicad/gerber/: arm-B_Cu.gbr  arm-B_Mask.gbr  arm-B_Paste.gbr  arm-B_Silkscreen.gbr  arm-Edge_Cuts.gbr  arm-F_Cu.gbr  arm-F_Mask.gbr  arm-F_Paste.gbr  arm-F_Silkscreen.gbr  arm-NPTH-drl_map.gbr  arm-NPTH.drl  arm-PTH-drl_map.gbr  arm-PTH.drl  arm-job.gbrjob
Unity/arm/Assets/: AnimateHandOnInput.cs  ArmController.cs  CameraStreamShader.shader  CenterMarker.cs  UIManager.cs
Unity/arm/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
(+4 files in other folders)
